# neurotrax

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
agents/ambient-capture/: README.md
agents/evidence-card/: README.md
agents/guided-capture/: README.md
agents/personal-trajectory/: README.md
apps/capture-web/: README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/capture-web/e2e/: ambient-browser-fixture.ts  ambient-smoke.spec.ts  fixture-demo.spec.ts  static-server.ts
apps/capture-web/public/: asset-manifest.json  voice-capture-worklet.js
apps/capture-web/scripts/: generate-asset-manifest.mjs
apps/capture-web/src/: face-worker.ts  (+50 more)
apps/clinician-review/: README.md
docs/: architecture.md  demo-experience.md  operator-guide.md  safety.md  telehealth-platform-vision.md  validation.md  voice-foundation.md
examples/: README.md  demo-patient-history.example.json  encounter-events.example.jsonl  encounter-observation.example.json  evidence-card.example.json  prior-encounter-observation.example.json  trajectory-comparison.example.json
protocols/: README.md  macbook-check-in.v0.1.json  voice-foundation.v0.1.json
scripts/: validate-structure.sh
services/voice-inference/: README.md  pyproject.toml
services/voice-inference/phenometric_voice/: __init__.py  adapters.py  app.py  config.py  manual_smoke.py  schemas.py
services/voice-inference/tests/: test_service.py
(+11 files in other folders)
