[project]
name = "phenometric-voice-inference"
version = "0.1.0"
description = "Local-only ephemeral speech representation adapter for PhenoMetric."
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi==0.139.2",
  "numpy==2.4.2",
  "pydantic==2.13.4",
  "uvicorn==0.51.0",
]

[project.optional-dependencies]
wavlm = [
  "torch==2.13.0",
  "transformers==5.14.1",
]
dev = [
  "httpx==0.28.1",
  "pytest==9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["phenometric_voice"]
